# XiamenlabsUnity2API

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.runtime  LICENSE  README.md  USAGE.md  prompt.md.example
.agent/: do.bat  menu.ps1  start.ps1  test_quick.ps1
.agent/docs/Stage1/: acceptance-checklist.md  feature-checklist.md  reasoning-implementation-summary.md  reasoning-quick-ref.md  reasoning-support.md
.agent/docs/Stage1-Initial/: implementation_notes.md  project_summary.md  prompt_examples.md  prompt_injection_feature.md
.agent/tests/Stage1/: test-reasoning.ps1
.agent/tests/Stage1-Initial/: test_api.ps1  test_prompt_injection.ps1
.github/: copilot-instructions.md
.github/workflows/: build.yml
src/: handlers.rs  main.rs  models.rs  proxy.rs
web/: chat.html  index.html
