[package]
edition = "2021"
name = "xiamenlabs-openai-proxy"
version = "0.1.0"

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
anyhow = "1.0"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
mime_guess = "2.0"
reqwest = {version = "0.12", features = ["json", "stream"]}
rust-embed = "8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
uuid = {version = "1.0", features = ["v4"]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
